fix: Adapt spacing in the modal for small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,9 @@ header h1 {
 }
 
 .modal-icons {
-  max-width: 1.5rem;
+  max-width: 50px;
+  cursor: pointer;
+  padding: 0.5rem;
 }
 
 .description-wrapper h1,
@@ -171,12 +173,18 @@ header h1 {
     font-size: 1rem;
   }
 
+  .modal-icons {
+    max-width: 20px;
+    padding: 0;
+  }
+
   .pokemon-image {
     min-width: 100px;
   }
 
   .detail-wrapper {
-    justify-content: center;
+    justify-content: space-evenly;
+    gap: 0.2rem;
   }
 
   .description-wrapper p {
